fix: price clipping on mobile

--- a/src/styles/components/_component.scss
+++ b/src/styles/components/_component.scss
@@ -114,7 +114,6 @@
                         text-align: center;
                         font-size: 18px;
                         height: 50px;
-                        margin: $margin;
 
                         .price {
                             text-decoration: underline;
@@ -230,7 +229,7 @@
                         text-align: center;
                         font-size: 18px;
                         height: 50px;
-                        margin: $margin;
+                        margin: 2em;
 
                         .price {
                             text-decoration: underline;
